--- a/web/css/member.css
+++ b/web/css/member.css
@@ -1,3 +1,10 @@
 body {
   padding-top: 4.7rem;
 }
+
+fieldset 
+	{
+		border: 1px solid #ddd;
+		border-radius:4px;
+		background-color:#f5f5f5;
+	}
