--- a/web/css/member.css
+++ b/web/css/member.css
@@ -6,5 +6,6 @@ fieldset
 	{
 		border: 1px solid #ddd;
 		border-radius:4px;
-		background-color:#f5f5f5;
+    background-color:#f5f5f5;
+    padding:15px;
 	}
